test/algeff/wrong/scoped1.kk.out
test/algeff/wrong/scoped1.kk(62, 3): error: type is not polymorph enough
 context : choice(xs)
 term : choice(xs)
 inferred type : forall<b,e> (resume-context<b,<nondet,state<int>|e>,b>, .op-choice<b>) -> <nondet,state<int>|e> b
 is less polymorph as: forall<_b> (resume-context<_b,<nondet,state<int>|_e>,$a>, op : .op-choice<_b>) -> <nondet,state<int>|_e> $a
 because : type cannot be instantiated to match the annotation